--- a/style.css
+++ b/style.css
@@ -186,27 +186,23 @@ h3{
 hr{
     border: none;
     border-top: 1px solid #9b9b9b;
-    margin: 20px 0;
+    /* margin: 20px 0; */
     width: 75%;
     margin-left: 170px;
     margin-top: 50px;
 }
-/* p{
-    font-size: 12px;
-    color: white;
-    display: flex;
-    flex-direction: row;
-} */
 .end{
     display: flex;
     flex-direction: row;
     color: white;
     justify-content: end;
-    padding-right: 210px;
-    padding-top: 10px;
-    padding-bottom: 30px;
+    padding-right: 100px;
+    padding-top: 5px;
+    padding-bottom: 15px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif; 
+    font-size: 12px;
 }
 p{
-    font-size: 12px;
+    font-size: 16px;
     font-family:Verdana, Geneva, Tahoma, sans-serif; 
 }
